DevImprovement-Updated pom.xml (deleted some plugins)