@@ -5,10 +5,11 @@
 	<artifactId>cukesatdd</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>cukesatdd</name>
+	<name>cukesatdd</name>  
 
 
 	<properties>
+
 		<selenium.version>2.53.0</selenium.version>
 		<cucumber.version>1.2.5</cucumber.version>
 		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
@@ -16,7 +17,8 @@
 	</properties>
 
 	<build>
-		<resources>
+	 
+		<resources>		    
 			<resource>
 				<directory>src/main/resources</directory>
 				<!-- schak38 : Read properties from classpath -->
@@ -28,10 +30,10 @@
 		</resources>
 
 		<plugins>
-		<plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.6.1</version>
+<version>3.6.1</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -43,42 +45,14 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.0.0</version>
+<version>3.0.0</version>
 			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.20</version>
-				<executions>
-					<execution>
-						<id>acceptance-test</id>
-						<phase>integration-test</phase>
-						<goals>
-							<goal>integration-test</goal>
-						</goals>
-						<configuration>
-							<daemon>true</daemon>
-							<testFailureIgnore>true</testFailureIgnore>
-						</configuration>
-					</execution>
-					<execution>
-						<id>verify</id>
-						<goals>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-				</executions>
- 				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.surefire</groupId>
-						<artifactId>surefire-junit47</artifactId>
-						<version>2.20</version>
-					</dependency>
-				</dependencies>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
 				<configuration>
-					<forkCount>20</forkCount>
-					<reuseForks>true</reuseForks>
 					<testSourceDirectory>${basedir}/src/main/java/</testSourceDirectory>
 					<testClassesDirectory>${project.build.directory}/classes/</testClassesDirectory>
 					<argLine>-Xmx512m -XX:MaxPermSize=512m</argLine>
@@ -87,112 +61,44 @@
 						<webdriverhost>${webdriverhost}</webdriverhost>
 					</systemPropertyVariables>
 				</configuration>
-				
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.1.1</version>
 				<executions>
 					<execution>
-						<id>script-execution</id>
-						<phase>post-integration-test</phase>
+						<id>acceptance-test</id>
+						<phase>integration-test</phase>
 						<goals>
-							<goal>exec</goal>
+							<goal>test</goal>
 						</goals>
+						<configuration>
+							<daemon>true</daemon>
+							<testFailureIgnore>false</testFailureIgnore>
+						</configuration>
 					</execution>
 				</executions>
-				<configuration>
-					<executable>${basedir}/src/main/resources/pdfReportGenerator.sh</executable>
-				</configuration>
 			</plugin>
-			<!-- <plugin>
-                           <groupId>org.apache.maven.plugins</groupId>
-                           <artifactId>maven-surefire-plugin</artifactId>
-                           <version>2.19.1</version>
-                           <configuration>
-                                  <testSourceDirectory>${basedir}/src/main/java/</testSourceDirectory>
-                                  <testClassesDirectory>${project.build.directory}/classes/</testClassesDirectory>
-                                  <testFailureIgnore>true</testFailureIgnore>
-                                  <printSummary>true</printSummary>
-                                 <argLine>-Xmx512m -XX:MaxPermSize=512m</argLine>
-                                 <systemPropertyVariables>
-                                        <environment>${environment}</environment>
-                                 </systemPropertyVariables>
-                           </configuration>
-                           <executions>
-                                 <execution>
-                                        <id>acceptance-test</id>
-                                        <phase>integration-test</phase>
-                                        <goals>
-                                               <goal>test</goal>
-                                        </goals>
-                                        <configuration>
-                                               <daemon>true</daemon>
-                                               <testFailureIgnore>false</testFailureIgnore>
-                                        </configuration>
-                                 </execution>
-                           </executions>
-                    </plugin> -->
 		</plugins>
-		<pluginManagement>
-			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings 
-					only. It has no influence on the Maven build itself. -->
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>
-											org.apache.maven.plugins
-										</groupId>
-										<artifactId>
-											maven-compiler-plugin
-										</artifactId>
-										<versionRange>
-											[3.5.1,)
-										</versionRange>
-										<goals>
-											<goal>testCompile</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
+		
 	</build>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>4.11</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-beans</artifactId>
-			<version>4.3.4.RELEASE</version>
+			<artifactId>org.springframework.beans</artifactId>
+			<version>3.1.1.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>4.3.4.RELEASE</version>
+			<version>3.1.1.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
-			<version>4.3.4.RELEASE</version>
+			<version>3.1.1.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.ldap</groupId>
@@ -212,7 +118,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>4.3.4.RELEASE</version>
+			<version>3.1.1.RELEASE</version>
 		</dependency>
 
 		<dependency>
@@ -244,7 +150,7 @@
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-junit</artifactId>
-			<version>1.2.4</version>
+			<version>${cucumber.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
@@ -293,11 +199,7 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.2</version>
 		</dependency>
-		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>2.6</version>
-		</dependency>
+		
 
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
@@ -309,12 +211,9 @@
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-chrome-driver</artifactId>
 			<version>${selenium.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-java</artifactId>
-			<version>${selenium.version}</version>
-		</dependency>
+		</dependency>		
+		
+		
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-firefox-driver</artifactId>
@@ -342,36 +241,45 @@
 			<version>1.2.3</version>
 		</dependency>
 
-		<dependency>
-		    <groupId>com.googlecode.json-simple</groupId>
-		    <artifactId>json-simple</artifactId>
-		    <version>1.1</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.github.mkolisnyk</groupId>
-			<artifactId>cucumber-report-generator</artifactId>
-			<version>1.0.8</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.github.mkolisnyk</groupId>
-			<artifactId>cucumber-reporting-maven-plugin</artifactId>
-			<version>1.0.8</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.github.mkolisnyk</groupId>
-			<artifactId>cucumber-reports</artifactId>
-			<version>1.0.7</version>
-		</dependency>
-		
+		<!-- https://mvnrepository.com/artifact/com.codeborne/phantomjsdriver -->
 		<dependency>
 			<groupId>com.codeborne</groupId>
 			<artifactId>phantomjsdriver</artifactId>
-			<version>1.2.1</version>
+			<version>1.2.1</version>		
+		
+
 		</dependency>
 
+		
+	<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-lang3</artifactId>
+    <version>3.0</version>
+    </dependency>
+    
+    <dependency>
+    <groupId>org.seleniumhq.selenium</groupId>  
+    <artifactId>htmlunit-driver</artifactId>  
+    <version>2.20</version>
+    </dependency>
+
+<dependency>
+            <groupId>com.github.mkolisnyk</groupId>
+            <artifactId>cucumber-report-generator</artifactId>
+            <version>1.0.8</version>
+        </dependency>
+ 
+        <dependency>
+            <groupId>com.github.mkolisnyk</groupId>
+            <artifactId>cucumber-reporting-maven-plugin</artifactId>
+            <version>1.0.8</version>
+        </dependency>
+ 
+        <dependency>
+            <groupId>com.github.mkolisnyk</groupId>
+            <artifactId>cucumber-reports</artifactId>
+            <version>1.0.7</version>
+        </dependency>
 	</dependencies>
 
 </project>
